--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "74b7b10f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +43,6 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "c98b2810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +100,6 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "40576d81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +116,6 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "c0ec4bd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +134,6 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "ec48466d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +157,6 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "0f2d88bd",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +190,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5eda294",
    "metadata": {},
    "source": [
     "### GAN Regression"
@@ -204,7 +197,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee6c70e4",
    "metadata": {},
    "source": [
     "$$\n",
@@ -215,7 +207,6 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "a0cb4773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +232,6 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "0c31a268",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +376,6 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "33bcd988",
    "metadata": {},
    "outputs": [
     {
@@ -424,19 +413,11 @@
     "plt.legend()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49acec69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -450,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
