--- a/Experiments.ipynb
+++ b/Experiments.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bbeb995b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +40,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "494575ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +92,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7764e53f",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +168,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "2c9c88b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +195,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e4212262",
    "metadata": {},
    "outputs": [
     {
@@ -307,19 +302,11 @@
     "        \n",
     "        plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb84f864",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -333,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
